# brfss-health-pipeline

./: .env.example  .gitignore  .sqlfluff  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
dbt_brfss/: dbt_project.yml  profiles.yml
dbt_brfss/analyses/: diabetes_prevalence_exploratory.sql
dbt_brfss/macros/: survey_weighted_mean.sql  winsorize_weights.sql
dbt_brfss/models/marts/diabetes/: _diabetes.yml  dim_respondent_demographics.sql  fct_diabetes_prevalence.sql  fct_diabetes_risk_factors.sql  fct_survey_weighted_estimates.sql
dbt_brfss/models/staging/: _sources.yml  _staging.yml  stg_brfss__respondents.sql
dbt_brfss/seeds/: brfss_state_codes.csv  brfss_variable_labels.csv
dbt_brfss/tests/: assert_diabetes_prevalence_reasonable.sql  assert_weights_sum_to_population.sql
docs/: BRFSS_variables_reference.md  data_dictionary.md
expectations/: validate_raw.py
flows/: brfss_pipeline.py
flows/deployments/: brfss_deployment.py
flows/tasks/: ingest_tasks.py  quality_tasks.py  transform_tasks.py
ingestion/: config.py  download_brfss.py  load_to_duckdb.py
tests/: test_download.py  test_load.py
