[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "brfss-health-pipeline"
version = "1.0.0"
description = "End-to-end health data engineering pipeline using BRFSS diabetes/metabolic data"
requires-python = ">=3.11"
dependencies = [
    # Data ingestion
    "pyreadstat>=1.2.7",
    "requests>=2.32.0",
    "tqdm>=4.66.0",
    "pandas>=2.2.0",
    # Storage
    "duckdb>=1.2.0",
    # Transformation
    "dbt-core>=1.9.0",
    "dbt-duckdb>=1.9.0",
    # Data quality
    "great-expectations>=1.3.0",
    # Orchestration
    "prefect>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-mock>=3.14.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
    "sqlfluff>=3.3.0",
    "jupyter>=1.1.0",
    "matplotlib>=3.9.0",
    "plotly>=5.24.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ingestion*", "flows*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
